kube/mongo/mongo-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: meal-tracker
    task: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meal-tracker
      task: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: meal-tracker
        task: mongo
    spec:
      containers:
      - name: mongo
        image: normak458/meal-tracker_mongo:v0.0.1
        imagePullPolicy: IfNotPresent #Always #IfNotPresent
        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: /data/db
          name: dbdata
      restartPolicy: Always
      volumes:
      - name: dbdata
        persistentVolumeClaim:
          claimName: dbdata
