kube/mongo/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: default
spec:
  selector:
    app: meal-tracker
    task: mongo
  ports:
  - name: mongo
    port: 27017

---
